[project]
name = "torchrobotics"
version = "0.1.0"
description = "Datasets, Transforms and Models specific to Robotics and Machine Vision"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0",
    "pyquaternion>=0.9.9",
    "scikit-learn>=1.5.0",
    "pillow>=11.0.0",
    "tqdm>=4.66.0",
    "cachetools>=5.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.0",
    "jupyterlab>=4.0.0",
]

[tool.uv]
managed = true
package = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
